add fixed buy buttons

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -346,6 +346,7 @@
     "primary_button": "Primary button",
     "product": "Product",
     "product_buy_buttons": "Buy buttons",
+    "product_mobile_buy_buttons": "Mobile Buy buttons",
     "product_card": "Product card",
     "product_card_media": "Media",
     "product_card_rendering": "Product card rendering",
